--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,8 @@
 <%# Write your code here! %>
+<h1>Welcome!</h1>
+
+<form method="POST" action="/greet">
+    <label for="user_name">Name:</label>
+    <input type="text" name="user_name"></input><br><br>
+    <input type="submit" value="Submit"></input>
+</form>
